--- a/index.html
+++ b/index.html
@@ -209,17 +209,24 @@
             <li>#MetroFMMusicAwards2025</li>
             <li>#GenesisMzansi</li>
             <li>#Spar</li>
-            <li>#ZaioRocks</li>
-            <li>#Zaio</li>
-            <li>#ZaioRocks</li>
-            <li>#WebdevRocks</li>
-            <li>#NdivhuwoCyprianMashau</li>
-            <li>#Myfirstindividualproject</li>
-            <li>#MetroFMMusicAwards2025</li>
-            <li>#GenesisMzansi</li>
-            <li>#Spar</li>
-            
+
         </ul>
+      </div>
+      <div class="footer">
+        <p>&copy; 2025 Ndivhuwo Cyprian Mashau. All rights reserved. </p>
+        <ul class="footer-links">
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="#">More</a></li>
+        </ul>
+        <label for="language-select">Language:</label>
+        <select id="language-select" name="language">
+          <option value="en">English</option>
+          <option value="af">Afrikaans</option>
+        </select>
+
       </div>
     </div>
   </div>
